--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">">
     <title>Document</title>
 </head>
 <body>
 
     <div class="container">
 
-        <h1 class="heading" id="title">Martin Lieber</h1>
+        <h1 class="heading" id="title">Martin <span id="span1">Lieber</span></h1>
         <div id="img-div">
-            <img src="./img/stan-lee.jpg" alt="" id="image" width="350px">
+            <img src="./img/stan-lee.jpg" alt="" id="image" width="350px" >
             <p>From 1922 to 2018</p>
         </div>
         <p id="info">
@@ -21,6 +24,25 @@
         </p>
 
         <h2 class="heading" id="marvel">Marvel Comics</h2>
+
+        <ul>
+            <li>The Amazing Spider-Man #1–100, 105–110, 116–118 (co-written with Gerry Conway), 200 (epilogue), Annual #1–5, 18 (1962–1984); (backup stories): #634–645 (2010–2011)</li>
+            <li>The Amazing Spider-Man, strips (1977–2018)[178]</li>
+            <li>The Avengers #1–34 (1963–1966)</li>
+            <li>Captain America #100–141 (1968–1971) (continues from Tales of Suspense #99)</li>
+            <li>Daredevil, #1–9, 11–50, 53 (story), Annual #1 (1964–1969)</li>
+            <li>Daredevil, vol. 2, #20 (backup story) (2001)</li>
+            <li>Epic Illustrated #1 (Silver Surfer) (1980)</li>
+            <li>Fantastic Four #1–114, 115 (plot), 120–125, Annual #1–6 (1961–1972); #296 (1986)</li>
+            <li>The Incredible Hulk #1–6 (1962–1963) (continues to Tales to Astonish #59)</li>
+            <li>The Incredible Hulk, vol. 2, #108–119, 120 (plot) (1968–1969)</li>
+            <li>Journey into Mystery (Thor) plotter #83–96 (1962–1963), writer #97–125, Annual #1 (1963–1966) (continues to Thor #126)</li>
+        </ul>
+
+        <p id="footer">
+            Aread more about Martin Lieber on 
+            <a href="https://en.wikipedia.org/wiki/Stan_Lee" target="_blank" id="link"> Wikipedia</a>
+        </p>
 
 
 
